# obliquetree

./: README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
docs/: requirements.txt
docs/source/: algo.md  conf.py  getting_started.md  intro.md
obliquetree/: __init__.py  _pywrap.py  utils.py
obliquetree/src/: base.pxd  base.pyx  ccp.pyx  metric.pyx  oblique.pxd  oblique.pyx  tree.pxd  tree.pyx  utils.pxd  utils.pyx
tests/: test_classification_smoke.py
