[project]
name = "obliquetree"
version = "1.1.0"

dependencies = [
    "numpy>=2.2.1",
]
authors = [
    { name = "Samet Copur", email = "sametcopur@yahoo.com" },
]
description = "Traditional and Oblique Decision Tree"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = [
    "python",
    "data-science",
    "machine-learning",
    "machine-learning-library",
    "explainable-ai",
    "decision-tree",
    "oblique-tree"
]

requires-python = ">=3.10"

[project.urls]
Documentation = "https://obliquetree.readthedocs.io/en/latest/"
Repository = "https://github.com/sametcopur/obliquetree"
Tracker = "https://github.com/sametcopur/obliquetree/issues"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"

[build-system]
requires = ["setuptools", "wheel", "Cython>=3.1", "numpy>=2.2.1"]
build-backend = "setuptools.build_meta"
